manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "heroes-node-backend"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "heroes-node-backend"
  template:
    metadata:
      labels:
        app: "heroes-node-backend"
    spec:
      containers:
        - name: "heroes-node-backend"
          image: "heroes.azurecr.io/heroescluster"
          ports:
          - containerPort: 3000
