manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "heroes-node-backend"
    labels:
        app: "heroes-node-backend"
spec:
    ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
    selector:
        app: "heroes-node-backend"
